@@ -32,6 +32,8 @@ class Backend(s3c.Backend):
     may or may not be available and can be queried for with instance methods.
     """
 
+    known_options = s3c.Backend.known_options | {'sse'}
+
     def __init__(self, storage_url, login, password, options):
         super().__init__(storage_url, login, password, options)
 
@@ -80,6 +82,23 @@ class Backend(s3c.Backend):
             finally:
                 keys[:MAX_KEYS] = tmp
 
+    @copy_ancestor_docstring
+    def copy(self, src, dest, metadata=None):
+        if 'sse' in self.options:
+            extra_headers = { 'x-amz-server-side-encryption': 'AES256' }
+        else:
+            extra_headers = None
+        return super().copy(src, dest, metadata=metadata,
+                            extra_headers=extra_headers)
+
+    @copy_ancestor_docstring
+    def open_write(self, key, metadata=None, is_compressed=False):
+        if 'sse' in self.options:
+            extra_headers = { 'x-amz-server-side-encryption': 'AES256' }
+        else:
+            extra_headers = None
+        return super().open_write(key, metadata=metadata, is_compressed=is_compressed,
+                                  extra_headers=extra_headers)
 
     @retry
     def _delete_multi(self, keys, force=False):
