@@ -31,6 +31,11 @@ UNRELEASED, S3QL tip
     unable to communicate with the remote server for longer than this
     period, the TCP/IP connection is re-established.
 
+  * The Amazon S3 backend now accepts a 'sse' option to enable server
+    side encryption. Both costs & benefits of S3 server side
+    encryption are probably very small, and this option does *not*
+    affect any client side encryption performed by S3QL itself.
+
 2014-07-28, S3QL 2.10.1
 
   * 'setup.py install' now also installs the s3ql_verify command.
